# gst-dynamic-sink

./: .gitignore  Cargo.toml  README.md  flow-explanation.md
.cargo/: config
src/: main.rs
